<resources>
    <string name="app_name">Dream-routine</string>
    <string name="hello_">Hello!</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register"><u>Register now</u></string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Forgot_pass"><u>Forgot password ?</u></string>
    <string name="Analytics">Analytics</string>
    <string name="Marks">Marks</string>
    <string name="Categories">Categories</string>
    <string name="logo_name">Win\nSho0</string>
    <string name="Close_menu">Close</string>
    <string name="Open_menu">Open</string>
    <string name="graph">Excellent !</string>
    <string name="graph_2"><b>You are very hardworking</b></string>
    <string name="I_accept">I accept</string>
    <string name="term"><u>terms &amp; condition</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_user01">Hello, User01!</string>
    
    <string name="title_activity_splash_screen">Dream Routine</string>
</resources>