<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFEB3B"
    tools:context=".RegisterActivity">

    <View
        android:id="@+id/group_20"
        android:layout_width="380dp"
        android:layout_height="500dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/user_name"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="@+id/group_20"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/name"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="@+id/group_20"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="Email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="@+id/group_20"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="@+id/group_20"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="450dp"
        android:fontFamily="@font/montserrat"
        android:minHeight="48dp"
        android:text="@string/I_accept"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="182dp"
        android:layout_marginTop="462dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/term"
        android:textAppearance="@style/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="510dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/montserrat"
        android:text="Register"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="580dp"
        android:fontFamily="@font/montserrat"
        android:text="Already have an account ?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="579dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Login"
        android:textAppearance="@style/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="204dp"
        android:layout_height="59dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/montserrat"
        android:text="Sign up"
        android:lineSpacingExtra="3sp"
        android:textSize="45sp"
        android:textAppearance="@style/hello_"
        android:translationY="-1.43sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>